--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "mongoose": "^5.7.10"
+    "moment": "^2.24.0",
+    "mongoose": "^5.7.10",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
